GMS-118 Remaining refactors completed